# 2048

./: 2048.cpp  CMakeLists.txt  README.md  color.txt  color2.txt  lib2048.cpp  lib2048.hpp  lib2048core.cpp  lib2048core.hpp  lib2048ui.hpp  lib2048utils.hpp  utils.hpp
